Create 4layer copy

--- a/NGCF_take2_4layer.ipynb
+++ b/NGCF_take2_4layer.ipynb
@@ -59,7 +59,7 @@
         "\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -132,11 +132,11 @@
       "metadata": {
         "id": "YlgYT5KcKugh",
         "colab_type": "code",
+        "outputId": "8024ce05-3c39-4ed6-905a-9b2394d5f2dc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "8024ce05-3c39-4ed6-905a-9b2394d5f2dc"
+        }
       },
       "source": [
         "# real data\n",
@@ -249,7 +249,7 @@
         "train_data.set_adj_matrix()\n",
         "test_data = DataLoader(test_file, batch_size=1024)"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -282,7 +282,7 @@
         "import torch.nn.functional as F\n",
         "\n",
         "# path to save model to\n",
-        "models_path = path/'models'\n",
+        "models_path = path/'models/4layer'\n",
         "\n",
         "class NGCF(Module):\n",
         "  def __init__(self, n_users, n_items, embed_size, n_layers, adj_matrix):\n",
@@ -363,11 +363,11 @@
       "metadata": {
         "id": "x3plBLDjm5NH",
         "colab_type": "code",
+        "outputId": "798abfb1-a545-452a-c15b-b384e5f3a218",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "798abfb1-a545-452a-c15b-b384e5f3a218"
+        }
       },
       "source": [
         "# optional: restore previously trained model\n",
@@ -379,13 +379,13 @@
         "\n",
         "# norm_adj, mean_adj, ngcf_adj = train_data.compute_adj_matrix()\n",
         "device = torch.device('cuda')\n",
-        "model = NGCF(n_users=train_data.n_users, n_items=train_data.n_items, embed_size=64, n_layers=2, adj_matrix=train_data.adj_matrix).to(device)\n",
+        "model = NGCF(n_users=train_data.n_users, n_items=train_data.n_items, embed_size=64, n_layers=4, adj_matrix=train_data.adj_matrix).to(device)\n",
         "optimizer = torch.optim.Adam(model.parameters(), lr=0.005)\n",
         "\n",
         "# Restore a previous model\n",
         "model, optimizer = restore_model(models_path, model, optimizer)"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -745,11 +745,11 @@
       "metadata": {
         "id": "dS9_dY7MpZy9",
         "colab_type": "code",
+        "outputId": "2764ac84-26b0-49b5-d2ad-60d34a538b3d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "2764ac84-26b0-49b5-d2ad-60d34a538b3d"
+        }
       },
       "source": [
         "def compute_ndcg(top_items, test_items, test_indices, k):\n",
@@ -792,9 +792,9 @@
         "  print('Recall:\\t' + str(mean_recall.item()))\n",
         "  print('NDCG:\\t' + str(mean_ndcg.item()))\n",
         "\n",
-        "evaluate(model.user_embeddings_final.detach(), model.item_embeddings_final.detach(), k=20)"
+        "# evaluate(model.user_embeddings_final.detach(), model.item_embeddings_final.detach(), k=20)"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -805,141 +805,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "iUl49uXH17W2",
-        "colab_type": "text"
-      },
-      "source": [
-        "# Evaluation"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_2P6ncEkiE2R",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def split_mtx(X, n_folds=100):\n",
-        "  # Split a matrix/Tensor into n_folds (for the user embeddings and the R matrices)\n",
-        "  X_folds = []\n",
-        "  fold_len = X.shape[0]//n_folds\n",
-        "  for i in range(n_folds):\n",
-        "    start = i * fold_len\n",
-        "    if i == n_folds -1:\n",
-        "      end = X.shape[0]\n",
-        "    else:\n",
-        "      end = (i + 1) * fold_len\n",
-        "    X_folds.append(X[start:end])\n",
-        "  return X_folds\n",
-        "\n",
-        "def ndcg_at_k_gpu(pred_items, test_items, test_indices, k):\n",
-        "  # to calculate ndcg@k\n",
-        "  r = (test_items * pred_items).gather(1, test_indices)\n",
-        "  f = torch.from_numpy(np.log2(np.arange(2, k+2))).float().cuda()\n",
-        "  dcg = (r[:, :k]/f).sum(1)\n",
-        "  dcg_max = (torch.sort(r, dim=1, descending=True)[0][:, :k]/f).sum(1)\n",
-        "  ndcg = dcg/dcg_max\n",
-        "  ndcg[torch.isnan(ndcg)] = 0\n",
-        "  return ndcg\n",
-        "\n",
-        "def test_GPU(u_emb, i_emb, Rtr, Rte, Ks):\n",
-        "  ue_folds = split_mtx(u_emb)\n",
-        "  tr_folds = split_mtx(Rtr)\n",
-        "  te_folds = split_mtx(Rte)\n",
-        "\n",
-        "  fold_prec, fold_rec, fold_ndcg, fold_hr = \\\n",
-        "    defaultdict(list), defaultdict(list), defaultdict(list), defaultdict(list)\n",
-        "  for ue_f, tr_f, te_f in zip(ue_folds, tr_folds, te_folds):\n",
-        "    scores = torch.mm(ue_f, i_emb.t())\n",
-        "    test_items = torch.from_numpy(te_f.todense()).float().cuda()\n",
-        "    non_train_items = torch.from_numpy(1-(tr_f.todense())).float().cuda()\n",
-        "    scores = scores * non_train_items\n",
-        "    _, test_indices = torch.topk(scores, dim=1, k=max(Ks))\n",
-        "    pred_items = torch.zeros_like(scores).float()\n",
-        "    pred_items.scatter_(dim=1,index=test_indices,src=torch.tensor(1.0).cuda())\n",
-        "\n",
-        "    for k in Ks:\n",
-        "      topk_preds = torch.zeros_like(scores).float()\n",
-        "      topk_preds.scatter_(dim=1,index=test_indices[:, :k],src=torch.tensor(1.0))\n",
-        "\n",
-        "      TP = (test_items * topk_preds).sum(1)\n",
-        "      prec = TP/k\n",
-        "      rec = TP/test_items.sum(1)\n",
-        "      hit_r = (TP > 0).float()\n",
-        "      ndcg = ndcg_at_k_gpu(pred_items, test_items, test_indices, k)\n",
-        "\n",
-        "      fold_prec[k].append(prec)\n",
-        "      fold_rec[k].append(rec)\n",
-        "      fold_ndcg[k].append(ndcg)\n",
-        "      fold_hr[k].append(hit_r)\n",
-        "\n",
-        "  result = {'precision': [], 'recall': [], 'ndcg': [], 'hit_ratio': []}\n",
-        "  for k in Ks:\n",
-        "    result['precision'].append(torch.cat(fold_prec[k]).mean())\n",
-        "    result['recall'].append(torch.cat(fold_rec[k]).mean())\n",
-        "    result['ndcg'].append(torch.cat(fold_ndcg[k]).mean())\n",
-        "    result['hit_ratio'].append(torch.cat(fold_hr[k]).mean())\n",
-        "  return result\n",
-        "\n",
-        "def early_stopping(log_value, best_value, stopping_step, expected_order='asc', patience=10):\n",
-        "  # better is higher or lower\n",
-        "  assert expected_order in ['asc', 'dec']\n",
-        "  if (expected_order == 'asc' and log_value >= best_value) or (expected_order == 'dec' and log_value <= best_value):\n",
-        "    stopping_step = 0\n",
-        "    best_value = log_value\n",
-        "  else:\n",
-        "    stopping_step += 1\n",
-        "  if stopping_step >= patience:\n",
-        "    print(\"Early stopping is trigger at step: {} log:{}\".format(patience, log_value))\n",
-        "    should_stop = True\n",
-        "  else:\n",
-        "    should_stop = False\n",
-        "  return best_value, stopping_step, should_stop\n",
-        "\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Z5O4b6tWqeQs",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# with early stopping\n",
-        "print_every, eval_every, save_every = 1, 1, 10\n",
-        "Ks = [10, 20]\n",
-        "\n",
-        "model = NGCF(n_users=1000, n_items=2000, embed_size=64, n_layers=2, adj_matrix=train_data.L)\n",
-        "optimizer = torch.optim.Adam(model.parameters(), lr=0.05)\n",
-        "n_epochs = 20\n",
-        "\n",
-        "model.train()\n",
-        "n_batch = train_data.n_data // train_data.batch_size + 1\n",
-        "print('Total batches: ' + str(n_batch))\n",
-        "\n",
-        "cur_best_loss, stopping_step, should_stop = 1e3, 0, False\n",
-        "\n",
-        "for t in range(n_epochs):\n",
-        "  epoch_loss = train(model, train_data)\n",
-        "  print(str(t) + ': ' + str(epoch_loss))\n",
-        "  if epoch % eval_every  == (eval_every - 1):\n",
-        "    result = test_GPU(model.user_embeddings_final.detach(), model.item_embeddings_final.detach(), train_data.R, test_data.R, Ks)\n",
-        "    log_value = result['recall'][0]\n",
-        "    cur_best_metric, stopping_step, should_stop = early_stopping(log_value, cur_best_metric, stopping_step, args.patience)\n",
-        "  if should_stop == True: \n",
-        "    break\n",
-        "  "
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
