--- a/NGCF_take2_3layer.ipynb
+++ b/NGCF_take2_3layer.ipynb
@@ -48,7 +48,7 @@
       "metadata": {
         "id": "-GuQIsFhz_O6",
         "colab_type": "code",
-        "outputId": "01213845-c96c-4b98-8361-35d68520a3eb",
+        "outputId": "6162410d-59b3-4326-9973-7f25365b12a1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -59,7 +59,7 @@
         "\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -132,7 +132,7 @@
       "metadata": {
         "id": "YlgYT5KcKugh",
         "colab_type": "code",
-        "outputId": "8024ce05-3c39-4ed6-905a-9b2394d5f2dc",
+        "outputId": "9dacd2f5-de1f-4240-d830-20f34ee04d50",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -249,7 +249,7 @@
         "train_data.set_adj_matrix()\n",
         "test_data = DataLoader(test_file, batch_size=1024)"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -363,11 +363,7 @@
       "metadata": {
         "id": "x3plBLDjm5NH",
         "colab_type": "code",
-        "outputId": "798abfb1-a545-452a-c15b-b384e5f3a218",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "colab": {}
       },
       "source": [
         "# optional: restore previously trained model\n",
@@ -383,25 +379,17 @@
         "optimizer = torch.optim.Adam(model.parameters(), lr=0.005)\n",
         "\n",
         "# Restore a previous model\n",
-        "# model, optimizer = restore_model(models_path, model, optimizer)"
+        "model, optimizer = restore_model(models_path, model, optimizer)"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Restored previous model\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "wHTQPAOcUD9X",
         "colab_type": "code",
-        "outputId": "3c6da74b-97e0-495e-ea93-22cf5f48eae1",
+        "outputId": "e088c6e3-4cec-40b5-a4e6-c0bc4487f629",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -492,249 +480,85 @@
         "    model.train()\n",
         "  print('\\n============\\n')"
       ],
-      "execution_count": 0,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Starting epoch: 1\n",
-            "Finished epoch 1 in\t748.3205902576447 sec\n",
-            "Total BPR loss:\t\t20.049512788653374\n",
-            "Average batch time:\t7.48320125579834\n",
+            "Finished epoch 1 in\t434.59136509895325 sec\n",
+            "Total BPR loss:\t\t34.294491827487946\n",
+            "Average batch time:\t4.3459104585647585\n",
             "\n",
             "============\n",
             "\n",
             "Starting epoch: 2\n",
-            "Finished epoch 2 in\t747.4265201091766 sec\n",
-            "Total BPR loss:\t\t19.296502575278282\n",
-            "Average batch time:\t7.4742617464065555\n",
+            "Finished epoch 2 in\t426.8777506351471 sec\n",
+            "Total BPR loss:\t\t26.01466354727745\n",
+            "Average batch time:\t4.268774521350861\n",
             "\n",
             "============\n",
             "\n",
             "Starting epoch: 3\n",
-            "Finished epoch 3 in\t748.0292520523071 sec\n",
-            "Total BPR loss:\t\t18.557230845093727\n",
-            "Average batch time:\t7.480289001464843\n",
+            "Finished epoch 3 in\t428.45179748535156 sec\n",
+            "Total BPR loss:\t\t23.645250603556633\n",
+            "Average batch time:\t4.284515016078949\n",
             "\n",
             "============\n",
             "\n",
             "Starting epoch: 4\n",
-            "Finished epoch 4 in\t748.0652596950531 sec\n",
-            "Total BPR loss:\t\t17.659307405352592\n",
-            "Average batch time:\t7.480648710727691\n",
+            "Finished epoch 4 in\t428.3479685783386 sec\n",
+            "Total BPR loss:\t\t21.970585882663727\n",
+            "Average batch time:\t4.283476853370667\n",
             "\n",
             "============\n",
             "\n",
             "Starting epoch: 5\n",
-            "Finished epoch 5 in\t748.0515072345734 sec\n",
-            "Total BPR loss:\t\t17.122695237398148\n",
-            "Average batch time:\t7.480511629581452\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([263])\n",
-            "torch.Size([306])\n",
-            "Recall:\tnan\n",
-            "NDCG\t:0.04501167684793472\n",
+            "Finished epoch 5 in\t428.5994427204132 sec\n",
+            "Total BPR loss:\t\t20.860596612095833\n",
+            "Average batch time:\t4.28599142074585\n",
+            "Recall:\t0.01042842585593462\n",
+            "NDCG\t:0.03114054724574089\n",
             "\n",
             "============\n",
             "\n",
-            "Starting epoch: 6\n"
+            "Starting epoch: 6\n",
+            "Finished epoch 6 in\t420.53358244895935 sec\n",
+            "Total BPR loss:\t\t19.9798564016819\n",
+            "Average batch time:\t4.2053330039978025\n",
+            "\n",
+            "============\n",
+            "\n",
+            "Starting epoch: 7\n",
+            "Finished epoch 7 in\t419.9792146682739 sec\n",
+            "Total BPR loss:\t\t19.142484039068222\n",
+            "Average batch time:\t4.19978931427002\n",
+            "\n",
+            "============\n",
+            "\n",
+            "Starting epoch: 8\n",
+            "Finished epoch 8 in\t420.05339097976685 sec\n",
+            "Total BPR loss:\t\t18.21943472325802\n",
+            "Average batch time:\t4.20053083896637\n",
+            "\n",
+            "============\n",
+            "\n",
+            "Starting epoch: 9\n",
+            "Finished epoch 9 in\t419.8019983768463 sec\n",
+            "Total BPR loss:\t\t17.552130937576294\n",
+            "Average batch time:\t4.1980171656608585\n",
+            "\n",
+            "============\n",
+            "\n",
+            "Starting epoch: 10\n",
+            "Finished epoch 10 in\t419.35176491737366 sec\n",
+            "Total BPR loss:\t\t16.965911999344826\n",
+            "Average batch time:\t4.193514814376831\n",
+            "Recall:\t0.01461443118751049\n",
+            "NDCG\t:0.042870935052633286\n",
+            "\n",
+            "============\n",
+            "\n"
           ],
           "name": "stdout"
         }
@@ -745,11 +569,7 @@
       "metadata": {
         "id": "dS9_dY7MpZy9",
         "colab_type": "code",
-        "outputId": "2764ac84-26b0-49b5-d2ad-60d34a538b3d",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
-        }
+        "colab": {}
       },
       "source": [
         "def compute_ndcg(top_items, test_items, test_indices, k):\n",
@@ -795,16 +615,46 @@
         "# evaluate(model.user_embeddings_final.detach(), model.item_embeddings_final.detach(), k=20)"
       ],
       "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vRJmOrBrBBhV",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "2c04b0fc-3c18-46ad-9bd5-5535195494e2"
+      },
+      "source": [
+        "evaluate(model.user_embeddings_final.detach(), model.item_embeddings_final.detach(), k=20)"
+      ],
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Recall:\t0.015093409456312656\n",
-            "NDCG\t:0.04501167684793472\n"
+            "Recall:\t0.01461443118751049\n",
+            "NDCG:\t0.042870935052633286\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jxgmpRwLTlcn",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
